--- a/SuperAdventure/SuperAdventure/SuperAdventure_WPF.csproj
+++ b/SuperAdventure/SuperAdventure/SuperAdventure_WPF.csproj
@@ -62,6 +62,9 @@
     <Compile Include="UI\SuperAdventure.xaml.cs">
       <DependentUpon>SuperAdventure.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UI\TradingScreen.xaml.cs">
+      <DependentUpon>TradingScreen.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -98,6 +101,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="UI\SuperAdventure.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\TradingScreen.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
