--- a/SuperAdventure/Engine/Engine.csproj
+++ b/SuperAdventure/Engine/Engine.csproj
@@ -59,6 +59,11 @@
     <Compile Include="Weapon.cs" />
     <Compile Include="World.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="SQL\SQLQuery1 - SavedGame.sql" />
+    <Content Include="SQL\SQLQuery2 - Inventory.sql" />
+    <Content Include="SQL\SQLQuery3 - Quest.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
