--- a/SuperAdventure/Engine/Engine.csproj
+++ b/SuperAdventure/Engine/Engine.csproj
@@ -61,6 +61,16 @@
     <Compile Include="World.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Images\Bridge.png" />
+    <Content Include="Images\FarmFields.png" />
+    <Content Include="Images\Farmhouse.png" />
+    <Content Include="Images\HerbalistsGarden.png" />
+    <Content Include="Images\HerbalistsHut.png" />
+    <Content Include="Images\Home.png" />
+    <Content Include="Images\SpiderForest.png" />
+    <Content Include="Images\TownGate.png" />
+    <Content Include="Images\TownSquare.png" />
+    <Content Include="Images\Trader.png" />
     <Content Include="SQL\SQLQuery1 - SavedGame.sql" />
     <Content Include="SQL\SQLQuery2 - Inventory.sql" />
     <Content Include="SQL\SQLQuery3 - Quest.sql" />
