--- a/SuperAdventure/SuperAdventure_WinForms/SuperAdventure_WinForms.csproj
+++ b/SuperAdventure/SuperAdventure_WinForms/SuperAdventure_WinForms.csproj
@@ -84,6 +84,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="SuperAdventureLocationImages-1.zip" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
