--- a/SuperAdventure/SuperAdventure_WinForms/SuperAdventure_WinForms.csproj
+++ b/SuperAdventure/SuperAdventure_WinForms/SuperAdventure_WinForms.csproj
@@ -81,6 +81,9 @@
     <EmbeddedResource Include="TradingScreen.resx">
       <DependentUpon>TradingScreen.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="WorldMap.resx">
+      <DependentUpon>WorldMap.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
